# crackNum

./: .gitignore  .travis.yml  CHANGES.md  COPYRIGHT  INSTALL  LICENSE  Makefile  README.md  Setup.hs  crackNum.cabal  crackNum.vim
.github/workflows/: haskell-ci.yml
Data/Numbers/: CrackNum.hs
Data/Numbers/CrackNum/: Data.hs  Main.hs  Utils.hs
Golds/: badInvocation0.gold  badInvocation1.gold  decode0.gold  decode1.gold  decode2.gold  decode3.gold  decode4.gold  decode5.gold  decode6.gold  decode7.gold  decode8.gold  decodeE4M3_+NaN.gold  decodeE4M3_-256.gold  decodeE4M3_-288.gold  decodeE4M3_-320.gold  decodeE4M3_-352.gold  decodeE4M3_-384.gold  decodeE4M3_-416.gold  decodeE4M3_-448.gold  decodeE4M3_-NaN.gold  decodeE4M3_256.gold  decodeE4M3_288.gold  decodeE4M3_320.gold  decodeE4M3_352.gold  decodeE4M3_384.gold  decodeE4M3_416.gold  decodeE4M3_448.gold  e0.gold  e5.gold  encode1.gold  encode10.gold  encode11.gold  encode12.gold  encode13.gold  encode14.gold  encode15.gold  encode16.gold  encode17.gold  encode18.gold  encode19.gold  (+62 more)
gui/: AppIcon.icns  Makefile  Package.swift  README.md  make-icon.swift
gui/Sources/CrackNum/: CrackNum.swift
src/CrackNum/: Main.hs  TestSuite.hs
