Name               : crackNum
Version            : 3.0
Synopsis           : Crack various integer and floating-point data formats
Description        : Crack IEEE-754 float formats and arbitrary sized words and integers, showing the layout.
                     .
                     For details, please see: <http://github.com/LeventErkok/crackNum/>
License            : BSD3
License-file       : LICENSE
Author             : Levent Erkok
Homepage           : http://github.com/LeventErkok/CrackNum
Maintainer         : erkokl@gmail.com
Copyright          : Levent Erkok
Category           : Tools
Build-type         : Simple
Cabal-version      : >= 1.8
Extra-Source-Files : README.md, COPYRIGHT, CHANGES.md

Tested-With       : GHC==8.10.2

source-repository head
    type:       git
    location:   git://github.com/LeventErkok/crackNum.git

Executable crackNum
   main-is       : CrackNum/Main.hs
   hs-source-dirs: src
   ghc-options   : -Wall -Wunused-packages
   build-depends : base >= 4.11 && < 5, libBF, sbv
   other-modules : Paths_crackNum
